--- a/solution/views/pages/books/example.ejs
+++ b/solution/views/pages/books/example.ejs
@@ -5,9 +5,9 @@
   <title>example</title>
 </head>
 <body>
-  <h1>
-    <a href="/elsewhere" id="elsewhereLink">elsewhere!</a> 
-  </h1>
+  <p>
+    <a href="/elsewhere" id="elsewhereLink">example partial!</a> 
+  </p>
   
 </body>
 </html>
