--- a/solution/views/pages/index.ejs
+++ b/solution/views/pages/index.ejs
@@ -9,7 +9,7 @@
 
       <%# The hashtag left of this sentence let's us comment in EJS! %>
 
-      <%- include('./books/example') %>
+      <%#- include('./books/example') %>
       <h4>Saved Books</h4>
       <p><%= books.length %> books in the Collection</p>
       <ul id="book-list">
