--- a/solution/views/layout/header.ejs
+++ b/solution/views/layout/header.ejs
@@ -8,7 +8,7 @@
     <div class="icon-menu"></div>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/searches/new">Search the Google Books API</a></li>
+      <li><a href="/searches/new">Search Google Books API</a></li>
     </ul>
   </nav>
 </header>
